# worker-bee

./: .containerignore  .editorconfig  .gitignore  Containerfile  config.capnp  entrypoint.sh  package.sh
.github/workflows/: build-push-release-images.yml
workerd_ui/: Cargo.toml  Trunk.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
workerd_ui/src/: app_home.rs  main.rs  nav_header.rs  pop_modal.rs  pop_modal_overlay.rs  services_table.rs  sockets_table.rs  utils.rs  workers_table.rs
workerd_ui_server/: Cargo.toml  build.rs
workerd_ui_server/.cargo/: config.toml
workerd_ui_server/src/: main.rs  server.rs  store.rs  workerd.rs
workerd_ui_server/workers/helloworld/: worker.js
