[package]
name = "workerd-ui-server"
version = "0.1.0"
authors = ["Edward Fitz Abucay <gh:@ffimnsr>"]
edition = "2021"
build = "build.rs"

[dependencies]
capnp = "0.18"
capnp-rpc = "0.18"
futures = "0.3"
serde = { version = "1.0.192", features = ["derive"] }
surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
tokio = { version = "1.0", features = ["macros", "net", "rt"] }
tokio-util = { version = "0.7", features = ["compat"] }

[build-dependencies]
capnpc = "0.18"
